--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,9 @@
-.containerText {
+.container {
     min-height: 500px;
     text-align: center;
     padding: 25px 0;
+}
+
+.containerText>* {
+    margin: 25px 0;
 }
